--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
         \n\n
     </string>
     <string name="what_is_your_nickname">What is your nickname?</string>
+    <string name="Done">done</string>
 </resources>
