tried to fix some errors in dimens and string xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,7 @@
         \n\nOther than that I'm just a guy trynna to find a purpose
         \n\nin this purposeless world, don't know where my journey
         \n\nwill take me next but it can only get better from here.
-        \n\n
-    </string>
+        \n\n</string>
     <string name="what_is_your_nickname">What is your nickname?</string>
     <string name="Done">done</string>
 </resources>
